Mon Aug 28 14:30:11 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * orbsvcs/tests/Security/BiDirectional/run_test.pl:

          Updated the test to run in SSL mode by default.

        * orbsvcs/tests/Security/BiDirectional/ssl/ca.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/client-cert.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/client-key.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/server-cert.pem:
        * orbsvcs/tests/Security/BiDirectional/ssl/server-key.pem:

          Updated expired certificates.

Mon Aug 28 12:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DII_Collocation_Tests/twoway/Hello.cpp:
          Added needed include to fix test failures in static builds

Mon Aug 28 09:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Simple/run_test.pl:
          Updated for VxWorks

Mon Aug 28 09:12:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Makefile.am:
          Regenerated

Mon Aug 28 07:18:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Bounded_Sequence_CDR_T.h:
        * tao/Unbounded_Sequence_CDR_T.h:
          Only deliver the CORBA::WChar specialization when ACE_LACKS_NATIVE_WCHAR_T
          is not defined. Thanks to Birgit Platt <bhe at newbase dot de> and
          Jules Colding <colding at omesc dot com> for reporting this problem

Sun Aug 27 11:10:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DII_Collocation_Tests/twoway/DII_Collocation_Tests.mpc:
          New file to build this test

        * tests/DII_Collocation_Tests/twoway/run_test.pl:
          Also cleanup the simple test ior file

        * tests/DII_Collocation_Tests/twoway/Server_Task.cpp:
          Layout changes and initialiser pointer to 0

Sat Aug 26 11:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2429_Regression/run_test.pl:
          Updated work with vxworks
