@@ -382,6 +382,19 @@ TAO_Object_Adapter::dispatch_servant (const TAO::ObjectKey &key,
     ACE_CHECK_RETURN (result);
   }
 
+#if TAO_HAS_INTERCEPTORS == 1
+  // ServerInterceptor might have raised ForwardRequest. In case of
+  // remote calls invocations the LocationForwardReply would have been
+  // sent in earlier stage, but in colocal scenario no message is sent
+  // and the LocationForward object must be passed over here to
+  // calling operation's mem-space.
+  if (req.collocated() && req.reply_status () == PortableInterceptor::LOCATION_FORWARD)
+    {
+      forward_to = CORBA::Object::_duplicate (req.forward_location ());
+      result = TAO_Adapter::DS_FORWARD;
+    }
+#endif
+
   return result;
 }
 
